--- a/home/wiki/Android/Setup.html
+++ b/home/wiki/Android/Setup.html
@@ -28,24 +28,27 @@
           <a href="#Installing_the_XOWA_Android_App"><span class="tocnumber">1</span> <span class="toctext">Installing the XOWA Android App</span></a>
         </li>
         <li class="toclevel-1 tocsection-2">
-          <a href="#Setting_up_a_wiki:_Simple_Wikipedia"><span class="tocnumber">2</span> <span class="toctext">Setting up a wiki: Simple Wikipedia</span></a> 
+          <a href="#Install_a_wiki_automatically:_Simple_Wikipedia"><span class="tocnumber">2</span> <span class="toctext">Install a wiki automatically: Simple Wikipedia</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-3">
+          <a href="#Install_a_wiki_manually:_Simple_Wikipedia"><span class="tocnumber">3</span> <span class="toctext">Install a wiki manually: Simple Wikipedia</span></a> 
           <ul>
-            <li class="toclevel-2 tocsection-3">
-              <a href="#Download_the_html-only_version_on_your_desktop"><span class="tocnumber">2.1</span> <span class="toctext">Download the html-only version on your desktop</span></a>
-            </li>
             <li class="toclevel-2 tocsection-4">
-              <a href="#Download_the_images_on_your_desktop"><span class="tocnumber">2.2</span> <span class="toctext">Download the images on your desktop</span></a>
+              <a href="#Download_the_files"><span class="tocnumber">3.1</span> <span class="toctext">Download the files</span></a>
             </li>
             <li class="toclevel-2 tocsection-5">
-              <a href="#Open_the_wiki_in_XOWA_Android"><span class="tocnumber">2.3</span> <span class="toctext">Open the wiki in XOWA Android</span></a>
+              <a href="#Open_the_wiki_in_XOWA_Android"><span class="tocnumber">3.2</span> <span class="toctext">Open the wiki in XOWA Android</span></a>
             </li>
           </ul>
         </li>
         <li class="toclevel-1 tocsection-6">
-          <a href="#Setting_up_a_wiki:_English_Wikipedia_or_any_other"><span class="tocnumber">3</span> <span class="toctext">Setting up a wiki: English Wikipedia or any other</span></a>
+          <a href="#Setting_up_a_wiki:_English_Wikipedia_or_any_other"><span class="tocnumber">4</span> <span class="toctext">Setting up a wiki: English Wikipedia or any other</span></a>
         </li>
         <li class="toclevel-1 tocsection-7">
-          <a href="#Android_wikis_"><span class="tocnumber">4</span> <span class="toctext">Android wikis</span></a>
+          <a href="#Android_file_path"><span class="tocnumber">5</span> <span class="toctext">Android file path</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-8">
+          <a href="#Android_wikis_"><span class="tocnumber">6</span> <span class="toctext">Android wikis</span></a>
         </li>
       </ul>
     </div>
@@ -67,106 +70,101 @@
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="Setting_up_a_wiki:_Simple_Wikipedia">Setting up a wiki: Simple Wikipedia</span>
+      <span class="mw-headline" id="Install_a_wiki_automatically:_Simple_Wikipedia">Install a wiki automatically: Simple Wikipedia</span>
     </h2>
-    <p>
-      For a brief test, let's start with Simple Wikipedia.
-    </p>
+    <ul>
+      <li>
+        Select XOWA from the Menu (button in upper left hand corner)
+      </li>
+      <li>
+        On the XOWA Wikis screen, press the Download button
+      </li>
+      <li>
+        Add Simple Wikipedia Articles to the Queue
+      </li>
+      <li>
+        Run the Queue
+      </li>
+      <li>
+        Select XOWA again from the Menu
+      </li>
+      <li>
+        Select simple.wikipedia.org
+      </li>
+    </ul>
+    <h2>
+      <span class="mw-headline" id="Install_a_wiki_manually:_Simple_Wikipedia">Install a wiki manually: Simple Wikipedia</span>
+    </h2>
     <h3>
-      <span class="mw-headline" id="Download_the_html-only_version_on_your_desktop">Download the html-only version on your desktop</span>
+      <span class="mw-headline" id="Download_the_files">Download the files</span>
     </h3>
     <ul>
       <li>
-        Download the html-only version. This will not have any images. It's about 500 MB.
+        Download the articles. This will not have any images and will be about 300 MB.
       </li>
     </ul>
     <dl>
       <dd>
-        <a href="https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-03-05_html.7z" rel="nofollow" class="external free">https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-03-05_html.7z</a> html
+        <a href="https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_core.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_core.zip</a>
+      </dd>
+      <dd>
+        <a href="https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_html.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_html.zip</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Unzip the 7z file using <a href="http://www.7-zip.org/" rel="nofollow" class="external text">7-zip</a>
+        Unzip the zip file to <code>C:\xowa\wiki\simple.wikipedia.org</code>. When you are done, you will have these files:
       </li>
     </ul>
     <dl>
       <dd>
-        Assuming you downloaded to the C drive, you should have a folder like <code>C:\xowa\wiki\simple.wikipedia.org</code>. This folder will have these files: 
-        <dl>
-          <dd>
-            C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-text.xowa
-          </dd>
-          <dd>
-            C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-html.xowa
-          </dd>
-          <dd>
-            C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file.xowa
-          </dd>
-          <dd>
-            C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file-user.xowa
-          </dd>
-        </dl>
+        <code>C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-core.xowa</code>
+      </dd>
+      <dd>
+        <code>C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-html.xowa</code>
       </dd>
     </dl>
     <ul>
       <li>
-        Move the files to your microSD card with a folder structure of <code>\Android\data\org.xowa\</code><sup id="cite_ref-android_path_0-0" class="reference"><a href="#cite_note-android_path-0">[1]</a></sup>. Assuming your microSD card is attached as the X drive, you will have files like these:
+        Move the files to your micro-SD card with a folder structure of <code>\Android\data\org.xowa\files\xowa\wiki\simple.wikipedia.org</code>. Assuming your micro-SD card is attached as the X drive, you will have files like these:
       </li>
     </ul>
     <dl>
       <dd>
-        <dl>
-          <dd>
-            X:\Android\data\org.xowa\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-text.xowa
-          </dd>
-          <dd>
-            X:\Android\data\org.xowa\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-html.xowa
-          </dd>
-          <dd>
-            X:\Android\data\org.xowa\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file.xowa
-          </dd>
-          <dd>
-            X:\Android\data\org.xowa\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file-user.xowa
-          </dd>
-        </dl>
+        <code>X:\Android\data\org.xowa\files\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-core.xowa</code>
       </dd>
-    </dl>
-    <h3>
-      <span class="mw-headline" id="Download_the_images_on_your_desktop">Download the images on your desktop</span>
-    </h3>
-    <p>
-      If you have time and space, you should also download the images
-    </p>
-    <ul>
-      <li>
-        Download the image file. This file is 2 GB.
-      </li>
-    </ul>
-    <dl>
       <dd>
-        <a href="https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-03-05_file.7z" rel="nofollow" class="external free">https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-03-05_file.7z</a> html
+        <code>X:\Android\data\org.xowa\files\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-html.xowa</code>
       </dd>
     </dl>
     <ul>
       <li>
-        Unzip the 7z file
+        Download the images. It will be about 2 GB.
       </li>
     </ul>
     <dl>
       <dd>
-        Assuming you downloaded to the C drive, you should have a folder like <code>C:\xowa\wiki\simple.wikipedia.org</code>. This folder will have these files: 
-        <dl>
-          <dd>
-            C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file.xowa
-          </dd>
-          <dd>
-            C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file-user.xowa
-          </dd>
-        </dl>
+        <a href="https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_file.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_file.zip</a>
       </dd>
+    </dl>
+    <ul>
+      <li>
+        Unzip the zip file to <code>C:\xowa\wiki\simple.wikipedia.org</code>. When you are done, you will have these files:
+      </li>
+    </ul>
+    <dl>
       <dd>
-        Note that these files have the same names as those in the html download. These files should overwrite the existing files in the html download.
+        <code>C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file.xowa</code>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Move the files to your micro-SD card with a folder. Following the example above, you will have files like these:
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <code>X:\Android\data\org.xowa\files\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file.xowa</code>
       </dd>
     </dl>
     <h3>
@@ -174,7 +172,7 @@
     </h3>
     <ul>
       <li>
-        Insert the microSD into your Android device
+        Insert the micro-SD into your Android device
       </li>
       <li>
         Launch XOWA on your Android device
@@ -186,17 +184,17 @@
         Press the <code>XOWA</code> button
       </li>
       <li>
-        Press the <code>blue plus</code> image in the top right-hand corner of the grid
+        Press the <code>download</code> button in the top right-hand corner.
       </li>
     </ul>
     <dl>
       <dd>
-        If you're on Marshmallow, you will get a prompt to allow XOWA to read your SD card. Please allow it. For more information on XOWA's privacy policy, see <a href="http://xowa.org/home/wiki/Help/Privacy/Android.html" id="xolnki_2" title="Help/Privacy/Android">Help/Privacy/Android</a>
+        If you're on Marshmallow, you will get a prompt to allow XOWA to read your SD card. Please allow it. For more information on XOWA's privacy policy, see <a href="http://xowa.org/home/wiki/Help/Privacy/Android.html" id="xolnki_2" title="Help/Privacy/Android" class="xowa-visited">Help/Privacy/Android</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Go to the wiki folder on your SD card
+        Navigate to the wiki folder on your SD card
       </li>
     </ul>
     <dl>
@@ -206,7 +204,7 @@
     </dl>
     <ul>
       <li>
-        Press the file with the XOWA icon. In this case it would be <code>simple.wikipedia.org-text.xowa</code>
+        Press the file with the XOWA icon. In this case, it would be <code>simple.wikipedia.org-core.xowa</code>
       </li>
       <li>
         Press the link for simple.wikipedia.org on the <code>XOWA</code> page. You will be navigated to <code>simple.wikipedia.org/wiki/Main_Page</code>.
@@ -262,9 +260,6 @@
           <li>
             html.core
           </li>
-          <li>
-            html.file stubs
-          </li>
         </ul>
       </li>
       <li>
@@ -274,16 +269,50 @@
             html.core
           </li>
           <li>
-            html.file stubs
-          </li>
-          <li>
             images.core
           </li>
         </ul>
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="Android_wikis_">Android wikis <sup id="cite_ref-more_wikis_1-0" class="reference"><a href="#cite_note-more_wikis-1">[2]</a></sup></span>
+      <span class="mw-headline" id="Android_file_path">Android file path</span>
+    </h2>
+    <p>
+      The <code>\Android\data\org.xowa\</code> folder is strongly recommended.
+    </p>
+    <ul>
+      <li>
+        Android Kit-Kat devices and up can only write to an external folder with this hierarchy: <code>\Android\data\org.xowa\</code>
+      </li>
+      <li>
+        XOWA Android currently does not write to any databases, but it will in the coming months. I'm working on an auto-update feature which will split a wiki into pieces and merge them together. The merging will require write permissions.
+      </li>
+    </ul>
+    <p>
+      If you don't ever plan on using the auto-update feature, you can use any other path. For example, <code>X:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-text.xowa</code>.
+    </p>
+    <p>
+      There is one catch: files in <code>\Android\data\org.xowa\</code> will be deleted when ...
+    </p>
+    <ul>
+      <li>
+        "Clear data" is selected from Settings -&gt; XOWA -&gt; Storage.
+      </li>
+      <li>
+        The app is uninstalled
+      </li>
+    </ul>
+    <p>
+      This means that you can copy English Wikipedia to <code>\Android\data\org.xowa\</code>, and have 100 GB of data deleted when pressing "Clear data".
+    </p>
+    <p>
+      If you want to guard against accidental deletion, you should install instead somewhere else, like <code>X:\xowa\</code>. Note that this means you will not be able to use the auto-update feature within the Android app. You will be able to use it from the desktop app.
+    </p>
+    <p>
+      <br>
+    </p>
+    <h2>
+      <span class="mw-headline" id="Android_wikis_">Android wikis <sup id="cite_ref-more_wikis_0-0" class="reference"><a href="#cite_note-more_wikis-0">[1]</a></sup></span>
     </h2>
     <table class='wikitable sortable'>
       <tr>
@@ -533,27 +562,8 @@
       </tr>
     </table>
     <ol class="references">
-      <li id="cite_note-android_path-0">
-        <span class="mw-cite-backlink"><a href="#cite_ref-android_path_0-0">^</a></span> 
-        <ul>
-          <li>
-            <span class="reference-text">The <code>\Android\data\org.xowa\</code> folder is strongly recommended.</span>
-            <ul>
-              <li>
-                <span class="reference-text">Android Kit-Kat devices can only write to an external folder with this hierarchy: <code>\Android\data\org.xowa\</code></span>
-              </li>
-              <li>
-                <span class="reference-text">XOWA Android currently does not write to any databases, but it will in the coming months. I'm working on an auto-update "merge" facility which will split a wiki into pieces and merge them together. The merging will require write permissions.</span>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <span class="reference-text">If you only want to have read-only access, you can use any other path. For example, X:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-text.xowa .</span>
-          </li>
-        </ul>
-      </li>
-      <li id="cite_note-more_wikis-1">
-        <span class="mw-cite-backlink"><a href="#cite_ref-more_wikis_1-0">^</a></span> <span class="reference-text">More wikis will be generated over the coming months. If you want a specific wiki, please make a request at <a href="https://github.com/gnosygnu/xowa/issues" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues</a></span>
+      <li id="cite_note-more_wikis-0">
+        <span class="mw-cite-backlink"><a href="#cite_ref-more_wikis_0-0">^</a></span> <span class="reference-text">More wikis will be generated over the coming months. If you want a specific wiki, please make a request at <a href="https://github.com/gnosygnu/xowa/issues" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues</a></span>
       </li>
     </ol>
   
