--- a/home/wiki/App/Basics/Files.html
+++ b/home/wiki/App/Basics/Files.html
@@ -83,7 +83,7 @@
         XOWA sees a [[File]] link on a page.
       </li>
       <li>
-        If image dbs are available, XOWA checks them to see if the image exists. To download an image db, see <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_2" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+        If image dbs are available, XOWA checks them to see if the image exists. To download an image db, see <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_2" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
       </li>
       <li>
         If image dbs are not available, or if the image is not in the image dbs, XOWA checks the Wikimedia servers
