--- a/home/wiki/App/Bookmarks.html
+++ b/home/wiki/App/Bookmarks.html
@@ -87,7 +87,7 @@
       <span class="mw-headline" id="HTTP_Server_support">HTTP Server support</span>
     </h3>
     <p>
-      Bookmarks can be viewed and edited in HTTP server mode. This has been tested with Firefox (39), Chrome (43), Safari (8) and Internet Explorer (9). If you have an older version and it doesn't work, please report it to <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_2" title="Help/Feedback">Help/Feedback</a>
+      Bookmarks can be viewed and edited in HTTP server mode. This has been tested with Firefox (39), Chrome (43), Safari (8) and Internet Explorer (9). If you have an older version and it doesn't work, please report it to <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_2" title="Help/Feedback" class="xowa-visited">Help/Feedback</a>
     </p>
     <h3>
       <span class="mw-headline" id="Resizing_columns">Resizing columns</span>
