--- a/home/wiki/App/Setup/Flash_card.html
+++ b/home/wiki/App/Setup/Flash_card.html
@@ -44,6 +44,9 @@
             </li>
           </ul>
         </li>
+        <li class="toclevel-1 tocsection-5">
+          <a href="#Portable_setup"><span class="tocnumber">2</span> <span class="toctext">Portable setup</span></a>
+        </li>
       </ul>
     </div>
     <h2>
@@ -102,6 +105,12 @@
         The embedded JRE uses functionality within the exe which in turn was built by launch4j. There is no specific code in XOWA to handle this function. Any issues with standalone JRE functionality will probably be resolvable at the launch4j level.
       </li>
     </ul>
+    <h2>
+      <span class="mw-headline" id="Portable_setup">Portable setup</span>
+    </h2>
+    <p>
+      XOWA can be set up to run with a portable JVM from portableapps.com. See: <a href="http://portableapps.com/apps/utilities/java_portable" rel="nofollow" class="external free">http://portableapps.com/apps/utilities/java_portable</a>
+    </p>
     <p>
       <br>
     </p>
