--- a/home/wiki/App/Xtn/Browser/HTTP_Server.html
+++ b/home/wiki/App/Xtn/Browser/HTTP_Server.html
@@ -27,7 +27,7 @@
       <span class="mw-headline" id="Overview">Overview</span>
     </h2>
     <p>
-      As of v0.12.1, XOWA now includes an HTTP server in addition to a TCP server. The TCP server is used by the Firefox Add-On (See <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_2" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a>).
+      As of v0.12.1, XOWA now includes an HTTP server in addition to a TCP server. The TCP server is used by the Firefox Add-On (See <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_2" title="App/Xtn/Browser/XOWA viewer" class="xowa-visited">App/Xtn/Browser/XOWA_viewer</a>).
     </p>
     <p>
       If you are using Firefox, the Firefox Add-On is the recommended solution for using XOWA within a browser. However, if you want to use XOWA from another browser (for example, Google Chrome) or across the network, you will want to use the HTTP server instead.
