--- a/home/wiki/App/Xtn/Browser/XOWA_viewer.html
+++ b/home/wiki/App/Xtn/Browser/XOWA_viewer.html
@@ -83,6 +83,9 @@
       <li>
         Set the jar location for "extensions.xowa_viewer.xowa_app" in about:config. See <a href="#Config" id="xolnki_2">Config</a> below
       </li>
+      <li>
+        For more info on setting up a portable Pale Moon or Firefox, see <a href="http://portableapps.com/node/21946" rel="nofollow" class="external free">http://portableapps.com/node/21946</a>
+      </li>
     </ul>
     <h3>
       <span class="mw-headline" id="Firefox">Firefox</span>
