--- a/home/wiki/Help/About.html
+++ b/home/wiki/Help/About.html
@@ -46,7 +46,7 @@
           version:
         </td>
         <td>
-          3.5.1.1 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log">view changes</a>)</b>
+          3.6.3.1 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
         </td>
       </tr>
       <tr>
@@ -54,7 +54,7 @@
           build_date:
         </td>
         <td>
-          2016-06-09 19:07
+          2016-06-17 03:27
         </td>
       </tr>
       <tr>
