--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -41,7 +41,7 @@
               <a href="http://xowa.org/home/wiki/App/Setup/System_requirements.html" id="xolnki_3" title="App/Setup/System requirements">System requirements</a><br>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_4" title="App/Setup/Installation">Installing</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_4" title="App/Setup/Installation" class="xowa-visited">Installing</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Upgrading.html" id="xolnki_5" title="App/Setup/Upgrading">Upgrading</a>
@@ -54,13 +54,13 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Import_overview.html" id="xolnki_6" title="App/Import/Import overview">Import Overview</a><br>
+              <a href="http://xowa.org/home/wiki/App/Import/Import_overview.html" id="xolnki_6" title="App/Import/Import overview" class="xowa-visited">Import Overview</a><br>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Simple_Wikipedia.html" id="xolnki_7" title="App/Import/Simple Wikipedia">Simple Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia">English Wikipedia</a>
+              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia" class="xowa-visited">English Wikipedia</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis">Other wikis</a>
@@ -150,6 +150,9 @@
             <li>
               <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_21" title="App/Xtn/Browser/HTTP Server">HTTP Server</a>
             </li>
+            <li>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_22" title="App/Xtn/Browser/XOWA viewer" class="xowa-visited">XOWA Viewer</a>
+            </li>
           </ul>
         </td>
         <th style='padding-top:10px;width:10%'>
@@ -158,7 +161,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_22" title="App/Wiki types/Wikia.com">Wikia.com</a>
+              <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_23" title="App/Wiki types/Wikia.com">Wikia.com</a>
             </li>
           </ul>
         </td>
@@ -175,16 +178,16 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_23" title="Dev/Command-line">Overview</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_24" title="Dev/Command-line">Overview</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_24" title="Dev/Command-line/Dumps">Image dumps</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata.html" id="xolnki_25" title="Dev/Command-line/Wikidata">Wikidata</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata.html" id="xolnki_26" title="Dev/Command-line/Wikidata">Wikidata</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Site_meta.html" id="xolnki_26" title="Dev/Command-line/Site meta">Site meta</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Site_meta.html" id="xolnki_27" title="Dev/Command-line/Site meta">Site meta</a>
             </li>
           </ul>
         </td>
@@ -194,13 +197,13 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Config_files/Index.html" id="xolnki_27" title="Dev/Config files/Index">Config files</a>
+              <a href="http://xowa.org/home/wiki/Dev/Config_files/Index.html" id="xolnki_28" title="Dev/Config files/Index">Config files</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Design/Language_files.html" id="xolnki_28" title="Dev/Design/Language files">Language files</a>
+              <a href="http://xowa.org/home/wiki/Dev/Design/Language_files.html" id="xolnki_29" title="Dev/Design/Language files">Language files</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_29" title="App/UI/Menus">Menu configuration</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_30" title="App/UI/Menus">Menu configuration</a>
             </li>
           </ul>
         </td>
@@ -210,10 +213,10 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Shrinking.html" id="xolnki_30" title="App/Import/Shrinking">Shrinking a wiki</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Shrinking.html" id="xolnki_31" title="App/Import/Shrinking">Shrinking a wiki</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_31" title="App/Setup/Flash card">Installing to a flash card</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_32" title="App/Setup/Flash card" class="xowa-visited">Installing to a flash card</a>
             </li>
           </ul>
         </td>
@@ -230,10 +233,10 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Code.html" id="xolnki_32" title="Dev/Code">Source code</a>
+              <a href="http://xowa.org/home/wiki/Dev/Code.html" id="xolnki_33" title="Dev/Code">Source code</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Installation/Notes.html" id="xolnki_33" title="App/Setup/Installation/Notes">Dev environment</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Installation/Notes.html" id="xolnki_34" title="App/Setup/Installation/Notes">Dev environment</a>
             </li>
           </ul>
         </td>
@@ -243,25 +246,25 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_34" title="App/Category">Category</a>
+              <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_35" title="App/Category">Category</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Scribunto.html" id="xolnki_35" title="App/Xtn/Mediawiki/Scribunto">Scribunto</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Scribunto.html" id="xolnki_36" title="App/Xtn/Mediawiki/Scribunto">Scribunto</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Math/MathJax.html" id="xolnki_36" title="App/Xtn/Mediawiki/Math/MathJax">MathJax</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Math/MathJax.html" id="xolnki_37" title="App/Xtn/Mediawiki/Math/MathJax">MathJax</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Score.html" id="xolnki_37" title="App/Xtn/Mediawiki/Score">Score</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Score.html" id="xolnki_38" title="App/Xtn/Mediawiki/Score">Score</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Html/Scripts.html" id="xolnki_38" title="App/Xtn/Html/Scripts">Sortable/collapsible tables</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Html/Scripts.html" id="xolnki_39" title="App/Xtn/Html/Scripts">Sortable/collapsible tables</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_39" title="App/Xtn/Import/Dansguardian">Dansguardian filter</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_40" title="App/Xtn/Import/Dansguardian">Dansguardian filter</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_40" title="App/Xtn/Browser/XOWA viewer">Firefox Addon</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_41" title="App/Xtn/Browser/XOWA viewer" class="xowa-visited">Firefox Addon</a>
             </li>
           </ul>
         </td>
@@ -271,10 +274,10 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_41" title="Diagnostics">Diagnostics</a>
+              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_42" title="Diagnostics">Diagnostics</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Installation/Self_extracting_exe.html" id="xolnki_42" title="App/Setup/Installation/Self extracting exe">Self extracting exe</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Installation/Self_extracting_exe.html" id="xolnki_43" title="App/Setup/Installation/Self extracting exe">Self extracting exe</a>
             </li>
           </ul>
         </td>
@@ -291,13 +294,13 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/FAQs.html" id="xolnki_43" title="Help/FAQs">FAQs</a>
+              <a href="http://xowa.org/home/wiki/Help/FAQs.html" id="xolnki_44" title="Help/FAQs">FAQs</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Contributing.html" id="xolnki_44" title="Help/Contributing">Contributing</a>
+              <a href="http://xowa.org/home/wiki/Help/Contributing.html" id="xolnki_45" title="Help/Contributing">Contributing</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_45" title="Help/Feedback">Feedback</a>
+              <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_46" title="Help/Feedback" class="xowa-visited">Feedback</a>
             </li>
           </ul>
         </td>
@@ -307,16 +310,16 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_46" title="Help/License/Code">License/Code</a>
+              <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_47" title="Help/License/Code">License/Code</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_47" title="Help/License/Docs">License/Docs</a>
+              <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_48" title="Help/License/Docs">License/Docs</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Privacy/Desktop.html" id="xolnki_48" title="Help/Privacy/Desktop">Privacy</a>
+              <a href="http://xowa.org/home/wiki/Help/Privacy/Desktop.html" id="xolnki_49" title="Help/Privacy/Desktop">Privacy</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Security.html" id="xolnki_49" title="Help/Security">Security</a>
+              <a href="http://xowa.org/home/wiki/Help/Security.html" id="xolnki_50" title="Help/Security">Security</a>
             </li>
           </ul>
         </td>
@@ -326,10 +329,10 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_50" title="Help/Release schedule">Release schedule</a>
+              <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_51" title="Help/Release schedule">Release schedule</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Roadmap.html" id="xolnki_51" title="Help/Roadmap">Roadmap</a>
+              <a href="http://xowa.org/home/wiki/Help/Roadmap.html" id="xolnki_52" title="Help/Roadmap">Roadmap</a>
             </li>
           </ul>
         </td>
@@ -346,54 +349,54 @@
         <td style='width:90%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Archive/App/UI/Main_window_layout.html" id="xolnki_52" title="Archive/App/UI/Main window layout">Window layout</a>
+              <a href="http://xowa.org/home/wiki/Archive/App/UI/Main_window_layout.html" id="xolnki_53" title="Archive/App/UI/Main window layout">Window layout</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_53" title="Dev/Design/Database">Dev/Design/Database</a>
+              <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_54" title="Dev/Design/Database" class="xowa-visited">Dev/Design/Database</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Environment/Text_editor.html" id="xolnki_54" title="Dev/Environment/Text editor">Dev/Environment/Text editor</a>
+              <a href="http://xowa.org/home/wiki/Dev/Environment/Text_editor.html" id="xolnki_55" title="Dev/Environment/Text editor">Dev/Environment/Text editor</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_55" title="App/UI/Find box">App/UI/Find box</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_56" title="App/UI/Find box">App/UI/Find box</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_56" title="App/Import/Removal">Removal</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_57" title="App/Import/Removal">Removal</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Offline.html" id="xolnki_57" title="App/Import/Offline">Import/Using_data_dump_files</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Offline.html" id="xolnki_58" title="App/Import/Offline">Import/Using_data_dump_files</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Manual.html" id="xolnki_58" title="App/Import/Manual">Import/Manual</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Manual.html" id="xolnki_59" title="App/Import/Manual">Import/Manual</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikidata.html" id="xolnki_59" title="App/Wiki types/Wikidata">Wikis/Wikidata</a>
+              <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikidata.html" id="xolnki_60" title="App/Wiki types/Wikidata">Wikis/Wikidata</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Wiki_types/Commons.html" id="xolnki_60" title="App/Wiki types/Commons">Wikis/Commons</a>
+              <a href="http://xowa.org/home/wiki/App/Wiki_types/Commons.html" id="xolnki_61" title="App/Wiki types/Commons">Wikis/Commons</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_61" title="App/Basics/Files">Files</a>
+              <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_62" title="App/Basics/Files">Files</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Android.html" id="xolnki_62" title="App/Xtn/Android">Android/Alpha</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Android.html" id="xolnki_63" title="App/Xtn/Android">Android/Alpha</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Design/CSS.html" id="xolnki_63" title="Dev/Design/CSS">Dev/Design/CSS</a>
+              <a href="http://xowa.org/home/wiki/Dev/Design/CSS.html" id="xolnki_64" title="Dev/Design/CSS">Dev/Design/CSS</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Design/Site_config.html" id="xolnki_64" title="Dev/Design/Site config">Dev/Design/Site_config</a>
+              <a href="http://xowa.org/home/wiki/Dev/Design/Site_config.html" id="xolnki_65" title="Dev/Design/Site config">Dev/Design/Site_config</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Archive/Help/Known_issues.html" id="xolnki_65" title="Archive/Help/Known issues">Archive/Help/Known issues</a>
+              <a href="http://xowa.org/home/wiki/Archive/Help/Known_issues.html" id="xolnki_66" title="Archive/Help/Known issues">Archive/Help/Known issues</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Printing.html" id="xolnki_66" title="App/UI/Printing">Printing</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Printing.html" id="xolnki_67" title="App/UI/Printing">Printing</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Download/Aria2.html" id="xolnki_67" title="App/Import/Download/Aria2">Aria2</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Download/Aria2.html" id="xolnki_68" title="App/Import/Download/Aria2">Aria2</a>
             </li>
           </ul>
         </td>
