--- a/home/wiki/Help/Overview.html
+++ b/home/wiki/Help/Overview.html
@@ -100,7 +100,7 @@
       </li>
     </ul>
     <p>
-      For a full list, see <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_3" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+      For a full list, see <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_3" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
     </p>
     <h2>
       <span class="mw-headline" id="Philosophy">Philosophy</span>
