--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   <style data-source="xowa" type="text/css">
-.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
+.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:200px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
   .options_textbox     {padding: 2px; border: 1px solid black;}
@@ -116,7 +116,7 @@ li.active a, li.active a:hover
   .bold      {font-weight: 900;}
 </style>
 <style data-source="xowa" type="text/css">
-.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
+.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:200px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
   .options_textbox     {padding: 2px; border: 1px solid black;}
@@ -412,10 +412,26 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_12" title="Options/Category">Category</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML_databases.html" id="xolnki_12" title="Options/HTML databases" class="xowa-visited">HTML databases</a>
+            </td>
+            <td>
+              HTML database usage options
+            </td>
+          </tr>
+          <tr>
+            <td class='options_row_label'>
+              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_13" title="Options/Category">Category</a>
             </td>
             <td>
               Category options
+            </td>
+          </tr>
+          <tr>
+            <td class='options_row_label'>
+              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_14" title="Options/Import Dansguardian" class="xowa-visited">Import Dansguardian</a>
+            </td>
+            <td>
+              Import using Dansguardian filters
             </td>
           </tr>
         </table>
@@ -425,7 +441,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_13" title="Options/HTML" class="xowa-visited">Appearance</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_15" title="Options/HTML" class="xowa-visited">Appearance</a>
             </td>
             <td>
               HTML page font and custom CSS
@@ -433,7 +449,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_14" title="Options/Wiki HTML">Wiki</a>
+              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_16" title="Options/Wiki HTML">Wiki</a>
             </td>
             <td>
               Miscellaneous wiki HTML options
@@ -441,7 +457,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_15" title="Options/HTML Tidy">Tidy</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_17" title="Options/HTML Tidy">Tidy</a>
             </td>
             <td>
               HTML Tidy options
@@ -454,7 +470,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_16" title="Options/Content apps" class="xowa-visited">Content Apps</a>
+              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_18" title="Options/Content apps" class="xowa-visited">Content Apps</a>
             </td>
             <td>
               Content applications (web browser, image viewer, media player)
@@ -462,7 +478,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Firefox_addon.html" id="xolnki_17" title="Options/Firefox addon">Firefox Add-on</a>
+              <a href="http://xowa.org/home/wiki/Options/Firefox_addon.html" id="xolnki_19" title="Options/Firefox addon">Firefox Add-on</a>
             </td>
             <td>
               Firefox Add-on: Run XOWA inside Firefox
@@ -470,7 +486,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_18" title="Options/HTTP server" class="xowa-visited">HTTP Server</a>
+              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_20" title="Options/HTTP server" class="xowa-visited">HTTP Server</a>
             </td>
             <td>
               HTTP Server: Run XOWA as an HTTP Server
@@ -483,7 +499,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_19" title="Options/Search suggest" class="xowa-visited">Search suggest</a>
+              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_21" title="Options/Search suggest" class="xowa-visited">Search suggest</a>
             </td>
             <td>
               Search suggest options (controls behavior in the search box)
@@ -491,7 +507,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_20" title="Options/Search">Search</a>
+              <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_22" title="Options/Search" class="xowa-visited">Search</a>
             </td>
             <td>
               Search options (controls behavior for Special:Search)
@@ -499,7 +515,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_21" title="Options/Popups">Popups</a>
+              <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_23" title="Options/Popups" class="xowa-visited">Popups</a>
             </td>
             <td>
               Popups that appear when hovering over a link
@@ -512,7 +528,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_22" title="Options/Math">Math</a>
+              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_24" title="Options/Math" class="xowa-visited">Math</a>
             </td>
             <td>
               Math options (text called in an {{#math}} statement)
@@ -520,7 +536,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_23" title="Options/Scribunto">Scribunto</a>
+              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_25" title="Options/Scribunto">Scribunto</a>
             </td>
             <td>
               Scribunto/Lua options (text called in an {{#invoke}} statement)
@@ -528,7 +544,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Score</a>
+              <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_26" title="Options/Score">Score</a>
             </td>
             <td>
               Score options (text called in a &lt;score&gt; statement; used to render musical scores)
@@ -536,7 +552,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Wikibase.html" id="xolnki_25" title="Options/Wikibase">Wikibase</a>
+              <a href="http://xowa.org/home/wiki/Options/Wikibase.html" id="xolnki_27" title="Options/Wikibase">Wikibase</a>
             </td>
             <td>
               Wikidata options
@@ -549,7 +565,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_26" title="Options/Dev" class="xowa-visited">Dev</a>
+              <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_28" title="Options/Dev" class="xowa-visited">Dev</a>
             </td>
             <td>
               Developer options
