--- a/home/wiki/Options/Search.html
+++ b/home/wiki/Options/Search.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   <style data-source="xowa" type="text/css">
-.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
+.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:200px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
   .options_textbox     {padding: 2px; border: 1px solid black;}
@@ -109,7 +109,7 @@ li.active a, li.active a:hover
 }
 </style>
 <style data-source="xowa" type="text/css">
-.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
+.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:200px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
   .options_textbox     {padding: 2px; border: 1px solid black;}
@@ -342,7 +342,7 @@ li.active a, li.active a:hover
             </td>
             <td>
 <textarea xowa_prop="xowa.api.special.search.multi_wikis" class="options_textarea" style="width: 600px; height:100px;" accesskey=',' id='xowa_prop_4'>
-&lt;any&gt;|&lt;self&gt;,*.wiktionary
+&lt;any&gt;|&lt;self&gt;
 </textarea>
             </td>
           </tr>
