--- a/home/wiki/App/Import/Import_overview.html
+++ b/home/wiki/App/Import/Import_overview.html
@@ -20,11 +20,55 @@
     <p>
       XOWA provides several options to import a wiki.
     </p>
+    <div id="toc" class="toc">
+      <div id="toctitle">
+        <h2>
+          Contents
+        </h2>
+      </div>
+      <ul>
+        <li class="toclevel-1 tocsection-1">
+          <a href="#Import_HTML_dumps_from_archive.org"><span class="tocnumber">1</span> <span class="toctext">Import HTML dumps from archive.org</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-2">
+          <a href="#Import_online_by_click"><span class="tocnumber">2</span> <span class="toctext">Import online by click</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-3">
+          <a href="#Import_offline_by_script"><span class="tocnumber">3</span> <span class="toctext">Import offline by script</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-4">
+          <a href="#Import_by_command-line"><span class="tocnumber">4</span> <span class="toctext">Import by command-line</span></a>
+        </li>
+      </ul>
+    </div>
+    <h2>
+      <span class="mw-headline" id="Import_HTML_dumps_from_archive.org">Import HTML dumps from archive.org</span>
+    </h2>
+    <p>
+      The <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_2" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a> page lists wikis that can be downloaded from archive.org.
+    </p>
+    <ul>
+      <li>
+        <b>Simple</b>: Find a wiki, click on it, and it will imported.
+      </li>
+      <li>
+        <b>Android-ready</b>: Listed wikis will work directly on Android
+      </li>
+      <li>
+        <b>Images included</b>: Listed wikis will also include image databases. The options below require downloading images separately.
+      </li>
+      <li>
+        <b>Fewer selection</b>: There are currently only a handful of wikis. More will be generated throughout 2016. If you need a specific wiki, please contact me by the <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_3" title="Help/Feedback" class="xowa-visited">Feedback</a> page.
+      </li>
+    </ul>
+    <p>
+      For more info, see <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_4" title="App/Import/Download Central" class="xowa-visited">App/Import/Download_Central</a>
+    </p>
     <h2>
       <span class="mw-headline" id="Import_online_by_click">Import online by click</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online" class="xowa-visited">Import online</a> page lists 800+ wikis that can be imported by clicking on a link.
+      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_5" title="Dashboard/Import/Online" class="xowa-visited">Import online</a> page lists 800+ wikis that can be imported by clicking on a link.
     </p>
     <ul>
       <li>
@@ -38,7 +82,7 @@
       <span class="mw-headline" id="Import_offline_by_script">Import offline by script</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_3" title="Dashboard/Import/Offline" class="xowa-visited">Import offline</a> page can generate a script that will import a wiki.
+      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_6" title="Dashboard/Import/Offline" class="xowa-visited">Import offline</a> page can generate a script that will import a wiki.
     </p>
     <ul>
       <li>
@@ -49,7 +93,7 @@
       <span class="mw-headline" id="Import_by_command-line">Import by command-line</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_4" title="Dev/Command-line">Dev/Command-line</a> page offers instructions on importing through the command-line.
+      The <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_7" title="Dev/Command-line">Dev/Command-line</a> page offers instructions on importing through the command-line.
     </p>
     <ul>
       <li>
