--- a/home/wiki/App/Xtn/Mediawiki/Math/Latex/Windows.html
+++ b/home/wiki/App/Xtn/Mediawiki/Math/Latex/Windows.html
@@ -49,7 +49,7 @@
       <span class="mw-headline" id="Manual:_options">Manual: options</span>
     </h2>
     <p>
-      The math module uses MathJax by default. You can change it to LaT<sub>E</sub>X by navigating to <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_2" title="Options/Math">Options/Math</a> and choosing LaTeX
+      The math module uses MathJax by default. You can change it to LaT<sub>E</sub>X by navigating to <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_2" title="Options/Math" class="xowa-visited">Options/Math</a> and choosing LaTeX
     </p>
     <h2>
       <span class="mw-headline" id="Testing">Testing</span>
