--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -706,7 +706,7 @@
     </p>
     <ul>
       <li>
-        Doc: Add note explaining image tarballs and tarball status {suggested by anonymous}. See: <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_6" title="Archive/Usage/Offline images">Archive/Usage/Offline_images</a> <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_7" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a>
+        Doc: Add note explaining image tarballs and tarball status {suggested by anonymous}. See: <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_6" title="Archive/Usage/Offline images">Archive/Usage/Offline_images</a> <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_7" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a>
       </li>
     </ul>
     <p>
@@ -1731,10 +1731,10 @@
     </p>
     <ul>
       <li>
-        Module.Popups: Reduce hide window time from 600 ms back to 400 ms. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_16" title="Options/Popups">Options/Popups</a>
+        Module.Popups: Reduce hide window time from 600 ms back to 400 ms. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_16" title="Options/Popups" class="xowa-visited">Options/Popups</a>
       </li>
       <li>
-        Module.Popups: Add mvar, math, nihongo* to keeplist. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_17" title="Options/Popups">Options/Popups</a> <a href="https://en.wikipedia.org/wiki/Degrees_of_freedom_(physics_and_chemistry)" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Degrees_of_freedom_(physics_and_chemistry)</a> <a href="https://en.wikipedia.org/wiki/Mono_no_aware" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Mono_no_aware</a>
+        Module.Popups: Add mvar, math, nihongo* to keeplist. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_17" title="Options/Popups" class="xowa-visited">Options/Popups</a> <a href="https://en.wikipedia.org/wiki/Degrees_of_freedom_(physics_and_chemistry)" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Degrees_of_freedom_(physics_and_chemistry)</a> <a href="https://en.wikipedia.org/wiki/Mono_no_aware" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Mono_no_aware</a>
       </li>
       <li>
         Performance: Add option to load html from url instead of from memory. See: <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_18" title="Options/Security" class="xowa-visited">Options/Security</a>
@@ -1833,19 +1833,19 @@
     </p>
     <ul>
       <li>
-        Module.Popups: Add performance optimization for English Wikipedia popups; EX:See "Template keeplist". See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_19" title="Options/Popups">Options/Popups</a>
+        Module.Popups: Add performance optimization for English Wikipedia popups; EX:See "Template keeplist". See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_19" title="Options/Popups" class="xowa-visited">Options/Popups</a>
       </li>
       <li>
         Module.Popups: Add XowaPopupHistory button at bottom of popup; EX:hover over sundial icon.
       </li>
       <li>
-        Module.Popups: Increase defaults for number of words shown. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_20" title="Options/Popups">Options/Popups</a>
+        Module.Popups: Increase defaults for number of words shown. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_20" title="Options/Popups" class="xowa-visited">Options/Popups</a>
       </li>
       <li>
-        Module.Popups: Increase hover show time from 400 to 600 ms (affects number of accidental hovers while scrolling through page). See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_21" title="Options/Popups">Options/Popups</a>
+        Module.Popups: Increase hover show time from 400 to 600 ms (affects number of accidental hovers while scrolling through page). See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_21" title="Options/Popups" class="xowa-visited">Options/Popups</a>
       </li>
       <li>
-        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files" class="xowa-visited">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
+        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files" class="xowa-visited">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math" class="xowa-visited">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -1959,13 +1959,13 @@
         Module.Popups: Add wiki domain when hovering over interwiki pages; EX:en.w:Earth -&gt; hover over link to en.q:Earth -&gt; show "Earth wiki:en.wikiquote.org" {suggested by Schnark}. See: <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a>
       </li>
       <li>
-        Module.Popups: Add option to skip evaluation of long templates; EX:See "Template token max". See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_27" title="Options/Popups">Options/Popups</a>
+        Module.Popups: Add option to skip evaluation of long templates; EX:See "Template token max". See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_27" title="Options/Popups" class="xowa-visited">Options/Popups</a>
       </li>
       <li>
-        Module.Popups: Add option to show popups in namespaces only; EX:See "Allowed namespaces" {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_28" title="Options/Popups">Options/Popups</a>
+        Module.Popups: Add option to show popups in namespaces only; EX:See "Allowed namespaces" {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_28" title="Options/Popups" class="xowa-visited">Options/Popups</a>
       </li>
       <li>
-        Module.Popups: Add option to scan forward additional words to stop at header; EX:See "Scan forward for header" {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_29" title="Options/Popups">Options/Popups</a>
+        Module.Popups: Add option to scan forward additional words to stop at header; EX:See "Scan forward for header" {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_29" title="Options/Popups" class="xowa-visited">Options/Popups</a>
       </li>
     </ul>
     <p>
@@ -2097,7 +2097,7 @@
     </p>
     <ul>
       <li>
-        Module.Popups: Add Popup functionality for hovering over links. See <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_31" title="Options/Popups">Options/Popups</a> and <a href="http://xowa.org/home/wiki/App/Xtn/Html/Popups.html" id="xolnki_32" title="App/Xtn/Html/Popups">App/Xtn/Html/Popups</a>.
+        Module.Popups: Add Popup functionality for hovering over links. See <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_31" title="Options/Popups" class="xowa-visited">Options/Popups</a> and <a href="http://xowa.org/home/wiki/App/Xtn/Html/Popups.html" id="xolnki_32" title="App/Xtn/Html/Popups">App/Xtn/Html/Popups</a>.
       </li>
       <li>
         Scribunto: Handle new package.lua (affects location map not loading on cities / countries); EX:package.lua. See: <a href="https://en.wikipedia.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Paris</a>
@@ -4026,7 +4026,7 @@
         Math: Note that MikTeX may fail to update images dynamically for first page {detected by William}.
       </li>
       <li>
-        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents">Help/Contents</a>
+        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents" class="xowa-visited">Help/Contents</a>
       </li>
     </ul>
     <p>
@@ -4103,7 +4103,7 @@
         Parser.Para: Remove blank lines when line starts with &lt;/td&gt;; EX:&lt;table&gt;&lt;tr&gt;&lt;td&gt;a\n&lt;/td&gt;\n\n\n\n&lt;/tr&gt;&lt;/table&gt;. See: <a href="https://fr.wikipedia.org/wiki/Portail:Génie_mécanique" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Portail:Génie_mécanique</a>
       </li>
       <li>
-        Parser.Para: Enclose final line of cell within existing para. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_93" title="Dashboard/Image databases">Dashboard/Image_databases</a> <a href="https://ru.wikipedia.org/" rel="nofollow" class="external free">https://ru.wikipedia.org/</a>
+        Parser.Para: Enclose final line of cell within existing para. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_93" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a> <a href="https://ru.wikipedia.org/" rel="nofollow" class="external free">https://ru.wikipedia.org/</a>
       </li>
       <li>
         Parser.Table: Recognize header cell if line starts with space; EX:" ! a | b !! c | d". See: <a href="http://ru.wikipedia.org/wiki/Храмы_Санкт-Петербурга" rel="nofollow" class="external free">http://ru.wikipedia.org/wiki/Храмы_Санкт-Петербурга</a>
@@ -4135,7 +4135,7 @@
     </p>
     <ul>
       <li>
-        Help.Download: Fix links for commonswiki (was pointing to enwikisource) {detected by Miles}. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_94" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+        Help.Download: Fix links for commonswiki (was pointing to enwikisource) {detected by Miles}. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_94" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
       </li>
     </ul>
     <p>
