--- a/home/wiki/Help/FAQs.html
+++ b/home/wiki/Help/FAQs.html
@@ -51,7 +51,7 @@
       <span class="mw-headline" id="I.27ve_found_a_bug._How_do_I_report_it.3F">I've found a bug. How do I report it?</span>
     </h2>
     <p>
-      Report it through Github, Wikipedia or by email! See <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_2" title="Help/Feedback">Help/Feedback</a>
+      Report it through Github, Wikipedia or by email! See <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_2" title="Help/Feedback" class="xowa-visited">Help/Feedback</a>
     </p>
     <h2>
       <span class="mw-headline" id="How_do_you_pronounce_XOWA.3F">How do you pronounce XOWA?</span>
