--- a/home/wiki/Help/Privacy/Desktop.html
+++ b/home/wiki/Help/Privacy/Desktop.html
@@ -183,7 +183,7 @@
       If you choose to use LaT<sub>E</sub>X then temporary files will be generated. All files are created in the following directory: <code>/xowa/file/name_of_wiki/math</code>.
     </p>
     <p>
-      You can always disable LaT<sub>E</sub>X again at <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_8" title="Options/Math">Options/Math</a>
+      You can always disable LaT<sub>E</sub>X again at <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_8" title="Options/Math" class="xowa-visited">Options/Math</a>
     </p>
     <h2>
       <span class="mw-headline" id="Content_applications">Content applications</span>
