--- a/home/wiki/Options/Files.html
+++ b/home/wiki/Options/Files.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   <style data-source="xowa" type="text/css">
-.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
+.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:200px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
   .options_textbox     {padding: 2px; border: 1px solid black;}
@@ -109,7 +109,7 @@ li.active a, li.active a:hover
 }
 </style>
 <style data-source="xowa" type="text/css">
-.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
+.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:200px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
   .options_textbox     {padding: 2px; border: 1px solid black;}
@@ -263,6 +263,9 @@ li.active a, li.active a:hover
             <a href='/wiki/Options/Files'>Files</a>
           </li>
           <li class=''>
+            <a href='/wiki/Options/HTML_databases'>HTML databases</a>
+          </li>
+          <li class=''>
             <a href='/wiki/Options/Category'>Category</a>
           </li>
           <li class=''>
@@ -357,9 +360,9 @@ li.active a, li.active a:hover
             <td>
 <textarea xowa_prop="xowa.api.usr.cache.info" class="options_textbox options_readonly" readonly='readonly' style="width: 600px; height: 100px;" id='xowa_prop_3'>
 cache folder: C:\xowa\file
-space used: 117.094 KB
-file count: 43
-oldest file: 2016-03-31 20:42:31
+space used: 1.211 MB
+file count: 184
+oldest file: 2016-06-19 20:43:45
 </textarea>
             </td>
           </tr>
