--- a/home/wiki/Options/Firefox_addon.html
+++ b/home/wiki/Options/Firefox_addon.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   <style data-source="xowa" type="text/css">
-.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
+.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:200px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
   .options_textbox     {padding: 2px; border: 1px solid black;}
@@ -109,7 +109,7 @@ li.active a, li.active a:hover
 }
 </style>
 <style data-source="xowa" type="text/css">
-.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
+.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:200px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
   .options_textbox     {padding: 2px; border: 1px solid black;}
@@ -310,7 +310,7 @@ li.active a, li.active a:hover
         </h2>
         <ol class="references">
           <li id="cite_note-install_by_firefox_exe-0">
-            <span class="mw-cite-backlink"><a href="#cite_ref-install_by_firefox_exe_0-0">^</a></span> <span class="reference-text">Installs the XOWA viewer add-on by running "firefox xowa_viewer.xpi". Note that Firefox should launch after clicking the install link. For more information, see <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_2" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a></span>
+            <span class="mw-cite-backlink"><a href="#cite_ref-install_by_firefox_exe_0-0">^</a></span> <span class="reference-text">Installs the XOWA viewer add-on by running "firefox xowa_viewer.xpi". Note that Firefox should launch after clicking the install link. For more information, see <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_2" title="App/Xtn/Browser/XOWA viewer" class="xowa-visited">App/Xtn/Browser/XOWA_viewer</a></span>
           </li>
           <li id="cite_note-firefox_exe_path-1">
             <span class="mw-cite-backlink"><a href="#cite_ref-firefox_exe_path_1-0">^</a></span> <span class="reference-text">Enter the path where Firefox is installed. (default is <code>firefox</code>) You may need to point this directly to your firefox executable if it doesn't work.</span>
