--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2016-06-19</b> English wikis updated<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
+    </li>
+  </ul>
+
   <b>2016-04-24</b> German wikis updated<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German wikis</a>
